[IMP] hr_recruitment: Bye Candidate, Hi Talent Pool
The goal of this PR can be split into three sections:

1. Remove the hr.candidate model
   The removal of the hr.candidate model required migrating information previously
   attached to the candidate over to the applicant. This change aims to simplify
   the flow of the recruitment app, as most SMEs don't need extensive complex
   recruitment workflows for hiring a few people occasionally.

2. Introduce the hr.talent.pool model
   While removing hr.candidate means losing features useful for industries like
   headhunting, the new talent pool system aims to re-introduce these features.
   It enables creating application templates (talents) from existing applications
   and using these talents to generate applications for other jobs.

3. Other minor UI/UX/DX tweaks
   - Improved job position form view for better user experience
   - Improved applicant form view to integrate with talent pool system
   - Renamed appraisal_goal_date/timeless_date to 'timeless_datetime' and moved
     it to 'hr' so it can be used in both appraisal and recruitment

These changes make the recruitment app more versatile. Smaller companies with
simple recruitment processes can use basic applications and recruitment flows
(similar to 17.4), while companies with complex needs can leverage talent pools
to manage applications as they did with the candidate model.

Task-4307229

--- a/addons/hr/views/hr_job_views.xml
+++ b/addons/hr/views/hr_job_views.xml
@@ -18,7 +18,7 @@
                             <h1><field name="name" options="{'line_breaks': False}" widget="text" placeholder="e.g. Sales Manager"/></h1>
                         </div>
                         <notebook>
-                            <page string="Recruitment" name="recruitment_page" invisible="1">
+                            <page string="Details" name="recruitment_page" invisible="1">
                                 <group>
                                     <group name="recruitment">
                                         <field name="company_id" options="{'no_create': True}" invisible="1" groups="base.group_multi_company" placeholder="Visible to all"/>
@@ -34,7 +34,7 @@
                                     </group>
                                 </group>
                             </page>
-                            <page string="Job Summary" name="job_description_page" invisible="1">
+                            <page string="Summary" name="job_description_page" invisible="1">
                                 <field name="description" options="{'collaborative': true}" placeholder="e.g. Summarize the position in one or two lines..."/>
                             </page>
                         </notebook>
