--- a/addons/hr_recruitment/views/menuitems.xml
+++ b/addons/hr_recruitment/views/menuitems.xml
@@ -30,18 +30,19 @@
                 groups="hr_recruitment.group_hr_recruitment_interviewer"/>
 
             <menuitem
+                name="Talent Pools"
+                parent="menu_crm_case_categ0_act_job"
+                id="menu_hr_talent_pools"
+                action="action_hr_talent_pool"
+                sequence="2"/>
+
+            <menuitem
                 name="All Applications"
                 parent="menu_crm_case_categ0_act_job"
                 id="menu_crm_case_categ_all_app"
                 action="crm_case_categ0_act_job"
-                sequence="2"/>
-
-            <menuitem
-                name="Candidates"
-                parent="menu_crm_case_categ0_act_job"
-                id="menu_hr_candidate"
-                action="action_hr_candidate"
                 sequence="3"/>
+
 
         <menuitem
             name="Reporting"
