--- a/addons/hr_recruitment/views/hr_job_views.xml
+++ b/addons/hr_recruitment/views/hr_job_views.xml
@@ -176,14 +176,6 @@
              <div name="recruitment_target" position="after">
                 <field name="user_id" widget="many2one_avatar_user"/>
                 <field name="interviewer_ids" widget="many2many_tags_avatar" options="{'no_create': True, 'no_create_edit': True}" />
-            </div>
-            <xpath expr="//field[@name='department_id']" position="after">
-                <label for="address_id"/>
-                <div class="o_row">
-                    <span invisible="address_id" class="oe_read_only">Remote</span>
-                    <field name="address_id" context="{'show_address': 1}" placeholder="Remote"/>
-                </div>
-                <field name="industry_id"/>
                 <label for="alias_name" string="Email Alias"
                        help="Define a specific contact address for this job position. If you keep it empty, the default email address will be used which is in human resources settings"/>
                 <div name="alias_def">
@@ -194,6 +186,14 @@
                                options="{'no_create': True, 'no_open': True}"/>
                     </div>
                 </div>
+            </div>
+            <xpath expr="//field[@name='department_id']" position="after">
+                <label for="address_id"/>
+                <div class="o_row">
+                    <span invisible="address_id" class="oe_read_only">Remote</span>
+                    <field name="address_id" context="{'show_address': 1}" placeholder="Remote"/>
+                </div>
+                <field name="industry_id"/>
             </xpath>
             <xpath expr="//field[@name='contract_type_id']" position="after">
                 <field name="company_id" groups="base.group_multi_company" placeholder="Visible to all"/>
@@ -203,6 +203,7 @@
                     string="Mission Dates"
                     options="{'end_date_field': 'date_to'}"/>
                 <field name="date_to" invisible="1" />
+                <field name="compensation" />
             </xpath>
             <xpath expr="//group" position="after">
                 <field name="job_properties" columns="2"/>
