--- a/addons/stock/views/stock_rule_views.xml
+++ b/addons/stock/views/stock_rule_views.xml
@@ -72,7 +72,7 @@
                             <group>
                                 <field name="active" invisible="1"/>
                                 <field name="company_id" invisible="1"/>
-                                <field name="picking_type_code_domain" invisible="1"/>
+                                <field name="picking_type_code_ids" invisible="1"/>
                                 <field name="action"/>
                                 <field name="picking_type_id"/>
                                 <field name="location_src_id" options="{'no_create': True}" required="action in ['pull', 'push', 'pull_push']"/>
