--- a/addons/hr_expense/wizard/hr_expense_refuse_reason_views.xml
+++ b/addons/hr_expense/wizard/hr_expense_refuse_reason_views.xml
@@ -5,7 +5,7 @@
         <field name="model">hr.expense.refuse.wizard</field>
         <field name="arch" type="xml">
             <form string="Expense refuse reason">
-                <field name="sheet_ids" invisible="1"/>
+                <field name="expense_ids" invisible="1"/>
                 <group>
                     <field string="Reason" name="reason" class="w-100"/>
                 </group>
