--- a/addons/hr_expense/report/hr_expense_report.xml
+++ b/addons/hr_expense/report/hr_expense_report.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <template id="report_expense_sheet">
+    <template id="report_expense">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="o">
                 <t t-call="web.external_layout">
@@ -14,15 +14,15 @@
                                     <div class="col-3 fw-bold"><span>Employee:</span> </div>
                                     <div class="col-9 text-muted"><span t-field="o.employee_id.name">Marc Demo</span></div>
                                 </div>
-                                <div class="row" t-if="o.accounting_date">
+                                <div class="row" t-if="o.date">
                                     <div class="col-3 fw-bold"><span>Date:</span></div>
-                                    <div class="col-9 text-muted"><span t-field="o.accounting_date">2023-08-11</span></div>
+                                    <div class="col-9 text-muted"><span t-field="o.date">2023-08-11</span></div>
                                 </div>
                             </div>
                             <div class="col-6">
-                                <div class="row" t-if="o.user_id.name">
+                                <div class="row" t-if="o.manager_id.name">
                                     <div class="col-3 fw-bold"><span>Manager:</span></div>
-                                    <div class="col-9 text-muted"><span t-field="o.user_id">Mitchell Admin</span></div>
+                                    <div class="col-9 text-muted"><span t-field="o.manager_id">Mitchell Admin</span></div>
                                 </div>
                                 <div class="row">
                                     <div class="col-3 fw-bold"><span>Paid by:</span></div>
@@ -35,19 +35,17 @@
                         <table class="o_has_total_table table table-borderless">
                             <thead>
                                 <tr>
-                                    <th class="text-start">Date</th>
                                     <th class="text-start">Name</th>
                                     <th class="text-end">Unit Price</th>
                                     <th class="text-end">Quantity</th>
                                     <th class="text-end">Taxes</th>
-                                    <t t-set="foreign_currencies" t-value="o.expense_line_ids.currency_id - o.company_currency_id"/>
+                                    <t t-set="foreign_currencies" t-value="o.currency_id - o.company_currency_id"/>
                                     <th t-if="foreign_currencies" class="text-end">Subtotal in currency</th>
                                     <th class="text-end">Subtotal</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr t-foreach="o.expense_line_ids" t-as="line">
-                                    <td class="text-start"><span t-field="line.date"></span></td>
+                                <tr t-foreach="o" t-as="line">
                                     <td t-att-class="'text-start' + (' o_overflow' if len(line.name) > 30 else '')">
                                         <span t-field="line.name">Flight Ticket</span>
                                     </td>
@@ -78,7 +76,7 @@
                                         </tr>
                                         <tr>
                                             <td>Taxes</td>
-                                            <td class="text-end"><span t-field="o.total_tax_amount" t-options='{"widget": "monetary", "display_currency": o.currency_id}'>$100.00</span></td>
+                                            <td class="text-end"><span t-field="o.tax_amount" t-options='{"widget": "monetary", "display_currency": o.currency_id}'>$100.00</span></td>
                                         </tr>
                                         <tr class="fw-bold">
                                             <td>Total</td>
@@ -97,7 +95,7 @@
         </t>
     </template>
 
-    <template id="report_expense_sheet_img">
+    <template id="report_expense_img">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="o">
                 <t t-call="web.basic_layout">
@@ -111,22 +109,22 @@
         </t>
     </template>
 
-    <record id="action_report_hr_expense_sheet" model="ir.actions.report">
+    <record id="action_report_hr_expense" model="ir.actions.report">
         <field name="name">Expenses Report</field>
-        <field name="model">hr.expense.sheet</field>
+        <field name="model">hr.expense</field>
         <field name="report_type">qweb-pdf</field>
-        <field name="report_name">hr_expense.report_expense_sheet</field>
-        <field name="report_file">hr_expense.report_expense_sheet</field>
-        <field name="print_report_name">'Expenses - %s - %s' % (object.employee_id.name, (object.name).replace('/', ''))</field>
-        <field name="binding_model_id" ref="model_hr_expense_sheet"/>
+        <field name="report_name">hr_expense.report_expense</field>
+        <field name="report_file">hr_expense.report_expense</field>
+        <field name="print_report_name">'Expense - %s - %s' % (object.employee_id.name, (object.name).replace('/', ''))</field>
+        <field name="binding_model_id" ref="model_hr_expense"/>
         <field name="binding_type">report</field>
     </record>
 
-    <record id="action_report_expense_sheet_img" model="ir.actions.report">
+    <record id="action_report_expense_img" model="ir.actions.report">
         <field name="name">Expense Report Image</field>
-        <field name="model">hr.expense.sheet</field>
+        <field name="model">hr.expense</field>
         <field name="report_type">qweb-pdf</field>
-        <field name="report_name">hr_expense.report_expense_sheet_img</field>
-        <field name="report_file">hr_expense.report_expense_sheet_img</field>
+        <field name="report_name">hr_expense.report_expense_img</field>
+        <field name="report_file">hr_expense.report_expense_img</field>
     </record>
 </odoo>
