--- a/addons/sale_expense/views/hr_expense_views.xml
+++ b/addons/sale_expense/views/hr_expense_views.xml
@@ -6,6 +6,15 @@
         <field name="inherit_id" ref="hr_expense.hr_expense_view_form"/>
         <field name="priority">30</field>
         <field name="arch" type="xml">
+            <button name="action_open_account_move" position="after">
+                <button name="action_open_sale_order"
+                    class="oe_stat_button"
+                    icon="fa-money"
+                    type="object"
+                    invisible="not sale_order_id">
+                    <field name="sale_order_id" widget="statinfo" string="Sales Order"/>
+                </button>
+            </button>
             <xpath expr="//field[@name='analytic_distribution']" position="before">
                 <field name="sale_order_id" groups="!sales_team.group_sale_salesman,!account.group_account_manager"
                     invisible="not can_be_reinvoiced"
@@ -35,7 +44,7 @@
         <field name="inherit_id" ref="hr_expense.view_expenses_tree"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='date']" position="before">
-                <field name="sale_order_id" optional="hide" invisible="not can_be_reinvoiced" readonly="state in ['done', 'refused']" options="{'no_create_edit': True, 'no_create': True, 'no_open': True}"  context="{'sale_show_partner_name': True, 'sale_expense_all_order': True}"/>
+                <field name="sale_order_id" optional="hide" invisible="not can_be_reinvoiced" readonly="state in ['posted', 'refused']" options="{'no_create_edit': True, 'no_create': True, 'no_open': True}"  context="{'sale_show_partner_name': True, 'sale_expense_all_order': True}"/>
                 <field name="can_be_reinvoiced" readonly="1" column_invisible="True"/>
             </xpath>
         </field>
@@ -49,18 +58,6 @@
             <xpath expr="//field[@name='employee_id']" position="after">
                 <field name="can_be_reinvoiced" column_invisible="True"/>
                 <field name="sale_order_id" force_save="1" readonly="not can_be_reinvoiced"/>
-            </xpath>
-        </field>
-    </record>
-
-    <record id="hr_expense_sheet_form_view_inherit_sale_expense" model="ir.ui.view">
-        <field name="name">hr.expense.sheet.form.inherit.sale.expense</field>
-        <field name="model">hr.expense.sheet</field>
-        <field name="inherit_id" ref="hr_expense.view_hr_expense_sheet_form"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='expense_line_ids']/list/field[@name='vendor_id']" position="after">
-                <field name="sale_order_id" invisible="not can_be_reinvoiced" readonly="state in ['done', 'refused']" optional="show" options="{'no_create_edit': True, 'no_create': True, 'no_open': True}" context="{'sale_show_partner_name': True, 'sale_expense_all_order': True}"/>
-                <field name="can_be_reinvoiced" column_invisible="True"/>
             </xpath>
         </field>
     </record>
