[IMP] website_event_exhibitor: add the sponsor inside the ticket
Purpose
========

Improve the design of the tickets by showing only wanted sponsors inside the
tickets.

This commit adds the feature by adding the boolean field inside the
event.sponsor model, and when this field is checked in, the sponsor will
be shown inside the ticket. This replaces the old condition based on
published flag, which is used for website only (footer).

Task-4247628

closes odoo/odoo#190173

Signed-off-by: Thibault Delavallee (tde) <tde@openerp.com>

--- a/addons/website_event_exhibitor/views/event_sponsor_views.xml
+++ b/addons/website_event_exhibitor/views/event_sponsor_views.xml
@@ -103,7 +103,7 @@
                             <field name="exhibitor_type" required="1"/>
                             <!-- Use website_published because is_published already used and widget conflicts -->
                             <field name="website_published" widget="boolean_toggle"
-                                string="Display in footer"
+                                string="Display on website footer"
                                 invisible="exhibitor_type != 'sponsor'"/>
                             <label for="hour_from" string="Opening Hours"
                                 invisible="exhibitor_type == 'sponsor'"/>
@@ -113,6 +113,7 @@
                                 <field name="hour_to" widget="float_time" nolabel="1" class="oe_inline"/>
                                 <field name="event_date_tz" nolabel="1" class="oe_inline"/>
                             </div>
+                            <field name="show_on_ticket"/>
                         </group>
                     </group>
                     <notebook>
@@ -155,6 +156,7 @@
                 <field name="sponsor_type_id"/>
                 <field name="is_published" optional="show"/>
                 <field name="exhibitor_type"/>
+                <field name="show_on_ticket" optional="hide"/>
             </list>
         </field>
     </record>
