--- a/addons/website_event_exhibitor/report/website_event_exhibitor_templates.xml
+++ b/addons/website_event_exhibitor/report/website_event_exhibitor_templates.xml
@@ -3,7 +3,7 @@
     <template id="event_report_full_page_ticket_layout_inherit_exhibitor" inherit_id="event.event_report_full_page_ticket_layout">
         <xpath expr="//div[hasclass('o_event_full_page_ticket_powered_by')]" position="before">
             <div t-if="not responsive_html" class="o_event_full_page_ticket_sponsors_container text-center mb-2">
-                <t t-foreach="event.sponsor_ids.filtered(lambda sponsor: sponsor.image_128 and sponsor.website_published)[:10]"
+                <t t-foreach="event.sponsor_ids.filtered(lambda sponsor: sponsor.image_128 and sponsor.show_on_ticket)[:10]"
                     t-as="sponsor">
                     <div class="o_event_full_page_ticket_sponsor_card d-inline-block">
                         <div class="h-100 p-2 pb-0">
